--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP
+                                            #weed #cannabis #cannabiscommunity #marijuana #weedporn #thc #weedstagram #cbd #cannabisculture #stoner #hightimes #smoke #weedlife #sativa #indica #ganja #kush #maryjane #highlife #smokeweedeveryday #high #life #dabs #hemp #medicalmarijuana #dank #highsociety #bhfyp #daily #bong
                                         </p>
                                     </div>
                                 </div>
