--- a/shop/index.html
+++ b/shop/index.html
@@ -128,7 +128,7 @@ heateor_sss_vertical_sharing{
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>ENTREGAS EN 45 MINUTOS</p></div>
+                                <div class="et_pb_text_inner"><p>SERVICIO EXPRESS 🛵</p></div>
                             </div>
                         </div>
                     </div>
@@ -1402,7 +1402,7 @@ heateor_sss_vertical_sharing{
                                 <div class="et_pb_module et_pb_text et_pb_text_0_tb_footer cus-animate  et_pb_text_align_center et_pb_bg_layout_light">
                                     <div class="et_pb_text_inner">
                                         <p>
-                                            SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP* SMOKE SHOP
+                                            #weed #cannabis #cannabiscommunity #marijuana #weedporn #thc #weedstagram #cbd #cannabisculture #stoner #hightimes #smoke #weedlife #sativa #indica #ganja #kush #maryjane #highlife #smokeweedeveryday #high #life #dabs #hemp #medicalmarijuana #dank #highsociety #bhfyp #daily #bong
                                         </p>
                                     </div>
                                 </div>
