--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -619,7 +619,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.900</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
+                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/halloween-pipe/">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
