--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="En Herbalist Smoke Shop encuentra los mejores accesorios para fumar con envio gratis en Costa Rica, CBD, bongs, pipas, vapes, y cultivo." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
-    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/ico.png" />
+    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/leaf.png" />
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
