--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
-    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" href="https://www.herbalist.ml/img/leaf.png" />
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
