--- a/shop/cbd/index.html
+++ b/shop/cbd/index.html
@@ -289,7 +289,7 @@
                     <div class="et_pb_row et_pb_row_0_tb_header">
                         <div class="et_pb_column et_pb_column_4_4 et_pb_column_0_tb_header  et_pb_css_mix_blend_mode_passthrough et-last-child">
                             <div class="et_pb_module et_pb_text et_pb_text_0_tb_header et_clickable  et_pb_text_align_center et_pb_bg_layout_light">
-                                <div class="et_pb_text_inner"><p>ENTREGAS EN 45 MINUTOS</p></div>
+                                <div class="et_pb_text_inner"><p>SERVICIO EXPRESS 🛵💨</p></div>
                             </div>
                         </div>
                     </div>
@@ -659,105 +659,7 @@
 
                                     </div>
 
-                                    <div class="et_pb_row et_pb_row_3">
-                                        <div class="et_pb_column et_pb_column_1_4 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
-
-
-                                            <div class="et_pb_module et_pb_blurb et_pb_blurb_0  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
-
-
-                                                <div class="et_pb_blurb_content">
-                                                    <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772 lazyload" data-src="https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 300w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1024w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 150w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 768w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1536w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1080w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1280w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 980w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png" alt="" srcset="https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1920w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 300w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1024w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 150w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 768w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1536w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1080w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 1280w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 980w, https://www.herbalist.ml/img/products/cbd/83e28d8b3057830.png 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2772" data-eio="l" /></noscript></span></div>
-                                                    <div class="et_pb_blurb_container">
-                                                        <h2 class="et_pb_module_header"><span>CBDMD CBD OIL 1500 MG NATURAL 30 ML</span></h2>
-
-                                                        <div class="et_pb_blurb_description">
-                                                            <p class="custom-btn-price">Espectro completo</p>
-                                                            <p class="custom-btn-price"><strong>$162.36</strong></p>
-                                                            <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
-                                                                    <span class="text">Comprar</span>
-                                                                    <span class="bg"></span>
-                                                                </a>
-                                                            </p>
-                                                        </div>
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough">
-
-
-                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_1  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
-
-
-                                            <div class="et_pb_blurb_content">
-                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828 lazyload" data-src="https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1920w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 300w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1024w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 150w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 768w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1536w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1080w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1280w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 980w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png" alt="" srcset="https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1920w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 300w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1024w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 150w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 768w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1536w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1080w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 1280w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 980w, https://www.herbalist.ml/img/products/cbd/294fae5e3507915.png 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2828" data-eio="l" /></noscript></span></div>
-                                                <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>CBDMD CBD OIL 1500 MG BERRY 30 ML</span></h2>
-
-                                                    <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price">Espectro completo</p>
-                                                        <p class="custom-btn-price"><strong>$162.36</strong></p>
-                                                        <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
-                                                                <span class="text">Comprar</span>
-                                                                <span class="bg"></span>
-                                                            </a>
-                                                        </p>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_5  et_pb_css_mix_blend_mode_passthrough">
-
-
-                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_2  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
-
-
-                                            <div class="et_pb_blurb_content">
-                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827 lazyload" data-src="https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1920w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 300w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1024w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 150w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 768w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1536w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1080w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1280w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 980w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 480w" data-sizes="auto" /><noscript><img width="1920" height="1920" src="https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png" alt="" srcset="https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1920w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 300w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1024w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 150w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 768w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1536w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1080w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 1280w, https://www.herbalist.ml/img/products/cbd/9b225e953057823.png 980w, https://www.herbalist.ml/img/products/cbd/b2155bed3057847.png 480w" sizes="(max-width: 1080px) 100vw, 1080px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2827" data-eio="l" /></noscript></span></div>
-                                                <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>CBDMD CBD OIL 3000 MG NATURAL 30 ML</span></h2>
-                                                    <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price">Espectro completo</p>
-                                                        <p class="custom-btn-price"><strong>$231.72</strong></p>
-                                                        <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
-                                                                <span class="text">Comprar</span>
-                                                                <span class="bg"></span>
-                                                            </a>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_6  et_pb_css_mix_blend_mode_passthrough et-last-child">
-
-
-                                        <div class="et_pb_module et_pb_blurb et_pb_blurb_3  et_pb_text_align_left  et_pb_blurb_position_top et_pb_bg_layout_light">
-
-                                            <div class="et_pb_blurb_content">
-                                                <div class="et_pb_main_blurb_image"><span class="et_pb_image_wrap et_pb_only_image_mode_wrap"><img width="960" height="960" src="https://www.herbalist.ml/img/products/cbd/b08607313507922.png" alt=""   class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783 lazyload" data-src="https://www.herbalist.ml/img/products/cbd/b08607313507922.png" loading="lazy" data-srcset="https://www.herbalist.ml/img/products/cbd/b08607313507922.png 960w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 300w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 150w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 768w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 480w" data-sizes="auto" /><noscript><img width="960" height="960" src="https://www.herbalist.ml/img/products/cbd/b08607313507922.png" alt="" srcset="https://www.herbalist.ml/img/products/cbd/b08607313507922.png 960w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 300w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 150w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 768w, https://www.herbalist.ml/img/products/cbd/b08607313507922.png 480w" sizes="(max-width: 960px) 100vw, 960px" class="et-waypoint et_pb_animation_top et_pb_animation_top_tablet et_pb_animation_top_phone wp-image-2783" data-eio="l" /></noscript></span></div>
-                                                <div class="et_pb_blurb_container">
-                                                    <h2 class="et_pb_module_header"><span>CBDMD CBD OIL 3000 MG BERRY 30 ML</span></h2>
-                                                    <div class="et_pb_blurb_description">
-                                                        <p class="custom-btn-price">Espectro completo</p>
-                                                        <p class="custom-btn-price"><strong>$231.72</strong></p>
-                                                        <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
-                                                                <span class="text">Comprar</span>
-                                                                <span class="bg"></span>
-                                                            </a>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    </div>
+                                 
 
                                     <div class="et_pb_row">
                                         <div class="section collection_description">
