--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </script>
 
     <!-- This site is optimized with the Yoast SEO Premium plugin v16.2 (Yoast SEO v17.3) - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>Herbalist Smoke Shop: Lo mejor en bongs, pipas y accesorios para fumar</title>
+    <title>Herbalist Smoke Shop con lo mejor en bongs, pipas y accesorios para fumar</title>
     <meta name="description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <link rel="canonical" href="https://www.herbalist.ml/" />
 
@@ -26,7 +26,7 @@
 
     <meta property="og:locale" content="en_CR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Herbalist Smoke Shop: Lo mejor en bongs, pipas y accesorios para fumar" />
+    <meta property="og:title" content="Herbalist Smoke Shop con lo mejor en bongs, pipas y accesorios para fumar" />
     <meta property="og:description" content="Herbalist es la mejor smoke shop online con la mejor colección de bongs, pipas, vaporizadores, CBD y accesorios para fumar a la venta." />
     <meta property="og:url" content="https://www.herbalist.ml/" />
     <meta property="og:site_name" content="Herbalist Smoke Shop" />
@@ -691,7 +691,7 @@
 
                             <div class="et_pb_module et_pb_text et_pb_text_1_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
 
-                                <div class="et_pb_text_inner"><h3>Herbalist Smoke Shop</h3>
+                                <div class="et_pb_text_inner"><h3>Herbalist Smoke Shop 🇨🇷 🇨🇦</h3>
 
                                     <p>
                                         <span>
