--- a/shop/bongs/index.html
+++ b/shop/bongs/index.html
@@ -472,7 +472,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/rasta-bong-de-vidrio/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -498,7 +498,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡18.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/rig-pequeno-de-silicon/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -526,7 +526,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/beaker-bong-rojo/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -548,7 +548,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡19.000</strong> </p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/rig-de-vidrio/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -577,7 +577,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡28.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/honeycomb-bong/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -604,7 +604,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡29.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/mask-bong/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -628,7 +628,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡24.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/bong-perc-de-20-cm/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -700,7 +700,7 @@
                                                 <div class="et_pb_blurb_description">
                                                     <p class="custom-btn-price"><strong>₡18.900</strong></p>
                                                     <p class="custom-btn-comprar">
-                                                        <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/bongs/silicone-beaker-bong/">
+                                                        <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                             <span class="text">Comprar</span>
                                                             <span class="bg"></span>
                                                         </a>
