--- a/shop/pipas/index.html
+++ b/shop/pipas/index.html
@@ -475,7 +475,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>$6.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipa-de-vidrio/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -499,7 +499,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/rainbow-pipe/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -544,7 +544,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.500</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipa-de-silicon-2-en-1/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -572,7 +572,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡7.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipas-de-vidrio-multicolor/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -596,7 +596,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡8.000</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/rasta-swirl-pipe/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -619,7 +619,7 @@
                                                     <div class="et_pb_blurb_description">
                                                         <p class="custom-btn-price"><strong>₡9.900</strong></p>
                                                         <p class="custom-btn-comprar">
-                                                            <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/halloween-pipe/">
+                                                            <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                 <span class="text">Comprar</span>
                                                                 <span class="bg"></span>
                                                             </a>
@@ -645,7 +645,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡5.000</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/hitters-de-vidrio/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
@@ -746,7 +746,7 @@
                                                         <div class="et_pb_blurb_description">
                                                             <p class="custom-btn-price"><strong>₡5.500</strong></p>
                                                             <p class="custom-btn-comprar">
-                                                                <a class="more btn btn--black" target="" href="https://www.smokeshop.ml/shop/pipas/pipas-trippie/">
+                                                                <a class="more btn btn--black" target="" href="https://wa.me/50671217851/?text=">
                                                                     <span class="text">Comprar</span>
                                                                     <span class="bg"></span>
                                                                 </a>
